# Katty

./: CMakeLists.txt  Katty.pro
Client/: CMakeLists.txt  Client.pro  Client.rc
Client/res/: Client.qrc  Client.rc
Client/src/: chatedit.cpp  chatedit.h  chatitemdelegate.cpp  chatitemdelegate.h  chatview.cpp  chatview.h  chatwidget.cpp  chatwidget.h  client.cpp  client.h  engine.cpp  engine.h  loadingoverlay.cpp  loadingoverlay.h  loginpage.cpp  loginpage.h  main.cpp  mainpage.cpp  mainpage.h  mainwindow.cpp  mainwindow.h  shareddata.cpp  shareddata.h  useritemdelegate.cpp  useritemdelegate.h
Server/: CMakeLists.txt  Server.pro
Server/src/: engine.cpp  engine.h  main.cpp  mainwindow.cpp  mainwindow.h  server.cpp  server.h
Shared/: CMakeLists.txt
include/: define.h
